--- a/Contacto.html
+++ b/Contacto.html
@@ -12,7 +12,7 @@
     <div class="contenedor encabezado-interno">
       <a class="logo" href="index.html">
         <img src="assets/img/logo.png" alt="Logo Luis Neyra">
-        Luis Neyra<span>DISEÑO WEB</span>
+        Luis Neyra<span>SERVICIO WEB</span>
       </a>
       <nav>
         <ul class="menu">
