Fix: use exact filename case in links for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <nav>
         <ul class="menu">
           <li><a class="activo" href="index.html">Inicio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="portafolio.html">Portafolio</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="Servicios.html">Servicios</a></li>
+          <li><a href="Portafolio.html">Portafolio</a></li>
+          <li><a href="Contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -30,7 +30,7 @@
     <div class="contenedor hero-interno">
       <h1>Diseño de Páginas Web Modernas y Efectivas</h1>
       <p>Transformo tu presencia digital en un sitio web atractivo, funcional y optimizado para atraer clientes.</p>
-      <a class="boton" href="contacto.html">Solicitar presupuesto</a>
+  <a class="boton" href="Contacto.html">Solicitar presupuesto</a>
     </div>
   </section>
 
@@ -68,7 +68,7 @@
     <div class="contenedor llamada-accion-interno">
       <h2>¿Listo para impulsar tu negocio online?</h2>
       <p>Diseño web profesional con un enfoque en resultados y conversión.</p>
-      <a class="boton boton-borde" href="portafolio.html">Ver mi portafolio</a>
+  <a class="boton boton-borde" href="Portafolio.html">Ver mi portafolio</a>
     </div>
   </section>
 
