--- a/Portafolio.html
+++ b/Portafolio.html
@@ -17,9 +17,9 @@
       <nav>
         <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a class="activo" href="portafolio.html">Portafolio</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="Servicios.html">Servicios</a></li>
+          <li><a class="activo" href="Portafolio.html">Portafolio</a></li>
+          <li><a href="Contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </div>
