--- a/Servicios.html
+++ b/Servicios.html
@@ -18,9 +18,9 @@
       <nav>
         <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
-          <li><a class="activo" href="servicios.html">Servicios</a></li>
-          <li><a href="portafolio.html">Portafolio</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a class="activo" href="Servicios.html">Servicios</a></li>
+          <li><a href="Portafolio.html">Portafolio</a></li>
+          <li><a href="Contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </div>
