--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="contenedor encabezado-interno">
       <a class="logo" href="index.html">
         <img src="assets/img/logo.png" alt="Logo Luis diseño web">
-        Luis Neyra<span>SERVICIO WEB</span>
+        Luis Neyra<span>SERVICIOS WEB</span>
       </a>
       <nav>
         <ul class="menu">
