--- a/Servicios.html
+++ b/Servicios.html
@@ -95,7 +95,7 @@
 
   <footer class="pie-pagina">
     <div class="contenedor pie-pagina-interno">
-      <p>© <span id="year">2025</span> Luis Neyra — Diseño Web y Estrategia Digital</p>
+      <p>© <span id="year">2025</span> Luis Neyra — Servicios Web</p>
       <p class="texto-pequeno">Sitio creado para ofrecer mis servicios profesionales.</p>
     </div>
   </footer>
