--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- PIE DE PÁGINA -->
   <footer class="pie-pagina">
     <div class="contenedor pie-pagina-interno">
-      <p>© 2025 Luis Neyra — Diseño de Páginas Web</p>
+      <p>© 2025 Luis Neyra — Servicios Web</p>
       <p class="texto-pequeno">Sitio creado para ofrecer mis servicios profesionales.</p>
     </div>
   </footer>
