--- a/Contacto.html
+++ b/Contacto.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contacto — Luis Neyra</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="assets/img/logo.png">
+  <link rel="apple-touch-icon" href="assets/img/logo.png">
   <meta name="description" content="Contacta con Luis Neyra, diseñador de páginas web modernas y efectivas.">
 </head>
 <body>
