--- a/Portafolio.html
+++ b/Portafolio.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portafolio — Luis Neyra</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="assets/img/logo.png">
+  <link rel="apple-touch-icon" href="assets/img/logo.png">
   <meta name="description" content="Proyectos de diseño web creados por Luis Neyra: sitios modernos, responsivos y optimizados.">
 </head>
 <body>
