--- a/Servicios.html
+++ b/Servicios.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Servicios — Luis Neyra</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="assets/img/logo.png">
+  <link rel="apple-touch-icon" href="assets/img/logo.png">
   <meta name="description" content="Servicios profesionales de diseño web, optimización SEO y desarrollo de sitios modernos por Luis Neyra.">
 </head>
 
