Add favicon.ico (generated from assets/img/logo.png) and link tags

--- a/Contacto.html
+++ b/Contacto.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="assets/img/logo.png">
   <link rel="apple-touch-icon" href="assets/img/logo.png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta name="description" content="Contacta con Luis Neyra, diseñador de páginas web modernas y efectivas.">
 </head>
 <body>
