--- a/Servicios.html
+++ b/Servicios.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="assets/img/logo.png">
   <link rel="apple-touch-icon" href="assets/img/logo.png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta name="description" content="Servicios profesionales de diseño web, optimización SEO y desarrollo de sitios modernos por Luis Neyra.">
 </head>
 
