Add Google Search Console meta tag for site verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="6RQAMNiTN1E1bIKEM4h9_NHE1W3JvRYXczZP48C7L5o" />
   <title>Luis Neyra — Diseño de Páginas Web</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="assets/img/logo.png">
