Add responsive hamburger menu and hide home link when active

--- a/Contacto.html
+++ b/Contacto.html
@@ -19,6 +19,7 @@
         Luis Neyra<span>SERVICIOS WEB</span>
       </a>
       <nav>
+        <button class="menu-toggle" aria-label="Abrir menú">☰</button>
         <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Servicios.html">Servicios</a></li>
@@ -26,6 +27,11 @@
           <li><a class="activo" href="Contacto.html">Contacto</a></li>
         </ul>
       </nav>
+      <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+          document.querySelector('.menu').classList.toggle('active');
+        });
+      </script>
     </div>
   </header>
 
